fix: audio-handler-simple z-index: 600

--- a/src/styles/audio.css
+++ b/src/styles/audio.css
@@ -29,7 +29,7 @@
   bottom: 50px;
   right: 100px;
   transform: translate(-50%, -50%);
-  z-index: 10;
+  z-index: 600;
   opacity: 0;
   pointer-events: none;
   width: fit-content;
